# shangwuju

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT-MAP.md  README.md  chatgpt分析.md  docker-compose.redis.yml  docker-compose.yml  halfday_trip_planner_test_coverage.md  problem.md  技术架构.md  晌午局Agent设计文档.docx  比赛详情.md  评审.md  问题(1).docx  问题.docx  项目说明.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  api_contract.md  main.py  pyproject.toml
backend/agent/: CONTEXT.md  __init__.py  assemble_blueprint.py  blueprint.py  blueprint_llm.py  critics.py  executor.py  feedback_detector.py  intent_parser.py  llm_client.py  llm_client_stub.py  llm_planner.py  lookup_hop.py  narrator.py  node_decider.py  observability_init.py  planner.py  planner_hybrid.py  planner_llm_first.py  refiner.py  router.py  segment_decider.py  thought_humanizer.py  trace.py  weights_llm.py
backend/api/: __init__.py  _session_store.py  _sse_helpers.py  adjust.py  amap.py  chat.py  collab.py  health.py  legal.py  oauth.py  preferences.py  scenarios.py
backend/auth/: __init__.py  providers.py
backend/collab/: __init__.py  room.py
backend/data/: loader.py  memory_store.py  nearby_provider.py
backend/docs/: 01-入口与会话过程.md  02-Planning策略过程.md  03-工具调用链路过程.md  04-异常处理与兜底过程.md  05-多人协作过程.md  06-验证与交付过程.md
backend/schemas/: __init__.py  advisory.py  category_vocab.py  decision_trace.py  demand_ledger.py  domain.py  errors.py  intent.py  itinerary.py  node_adjustment.py  node_chip.py  node_detail.py  persona.py  pin.py  planner_mode.py  refine.py  router.py  sse.py  tags.py  tools.py
backend/scripts/: analyze_overload_coefficient.py  audit_review_template.py  enrich_mock_coords.py  enrich_mock_data.py  experiment_critic_value.py  generate_reviews.py  measure_shake.py  migrate_mock_v2.py  smoke_final_llm.py  smoke_langgraph_mimo.py  spike_room_resume.py  verify_collab.py  verify_edge_model.py  verify_langgraph.py  verify_legacy_frozen.py  verify_llm_first.py  verify_phase0_5.py  verify_planning.py  verify_planning_quality.py  verify_react_agent.py  verify_refine.py  verify_repository.py  verify_router.py  verify_schema_hardening.py  verify_schemas.py  verify_spec_c_demo.py  verify_speed_constraints.py  verify_sse.py  verify_tool_provider.py  verify_v2_react.py  verify_v2_turn.py
backend/tests/: conftest.py  fake_tools.py  test_age_caps.py  (+168 more)
(+476 files in other folders)
