[project]
name = "shangwuju-backend"
version = "0.1.0"
description = "晌午局后端：本地半日出行管家 Agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
runtime = [
  # Phase 1+ 才会用，先列出来
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=2.1",
  "openai>=1.30",
  "python-dotenv>=1.0",
  "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "scripts"]

[tool.uv]
package = true
