[project]
name = "shangwuju-backend"
version = "0.1.0"
description = "晌午局后端：本地半日出行管家 Agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "openai>=1.30",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
runtime = [
  # P3 才会用（HTTP/SSE 网关，W3 owner）
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "scripts", "data", "tools", "agent"]

[tool.uv]
package = true
