[project]
name = "shangwuju-backend"
version = "0.1.0"
description = "晌午局后端：本地半日出行管家 Agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "openai>=1.30",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "httpx>=0.28.1",
  "pydantic-ai-slim[openai]>=1.97.0",
  "langgraph>=1.2.0",
  "langchain-openai>=1.2.1",
  "langchain-core>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
runtime = [
  # P3 才会用（HTTP/SSE 网关，W3 owner）
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=2.1",
  # Phase 0.22：可观测平台（Pydantic 出品，OpenTelemetry 兼容）
  # LOGFIRE_TOKEN 配了走云端；不配走本地控制台（demo 安全）
  "logfire>=2.10",
  # 真持久化（FC 部署强制依赖；本地 docker compose 一键起 Redis）
  "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["schemas", "scripts", "data", "tools", "agent"]

[tool.uv]
package = true
